--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
-Theano>=0.8.2
-Gensim==0.13.1
+boto==2.49.0
+boto3==1.12.21
+botocore==1.15.21
+bz2file==0.98
+certifi==2019.11.28
+chardet==3.0.4
+decorator==4.0.6
+docutils==0.15.2
+futures==3.3.0
+gensim==0.13.1
+idna==2.9
+jmespath==0.9.5
+nose==1.3.7
+numpy==1.11.0
 pandas==0.19.2
+Pillow==3.1.2
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+s3transfer==0.3.3
+scipy==0.17.0
+six==1.14.0
+smart-open==1.9.0
+Theano==1.0.4
+urllib3==1.25.8
